Added applied_on to database and added rls (#14)
